# MCPRPCBrige

./: .gitignore
RPC/McpRpcBridge/: CMakeLists.txt  README.md
RPC/McpRpcBridge/example/: CMakeLists.txt  example_service.proto
RPC/McpRpcBridge/example/client/: CMakeLists.txt  main.cc
RPC/McpRpcBridge/example/server/: CMakeLists.txt  main.cc
RPC/McpRpcBridge/src/: CMakeLists.txt  McpRpcBridge.h
RPC/McpRpcBridge/src/invoker/: KrpcInvoker.cc  KrpcInvoker.h  MockRpcInvoker.cc  MockRpcInvoker.h  RpcInvoker.cc  RpcInvoker.h
RPC/McpRpcBridge/src/mcp/: ArgumentsDeserializer.cc  ArgumentsDeserializer.h  LazyValue.h  MCPSession.cc  MCPSession.h  ProtoSchemaConverter.cc  ProtoSchemaConverter.h  StreamingConfig.h  StreamingResponseAggregator.cc  StreamingResponseAggregator.h  ToolRegistry.cc  ToolRegistry.h
RPC/McpRpcBridge/test/: CMakeLists.txt  test_arguments_deserializer.cc  test_integration_e2e.cc  test_krpc_invoker.cc  test_lazy_value.cc  test_lazy_value_complete.cc  test_mcp_session.cc  test_mcp_session_streaming.cc  test_rpc_invoker.cc  test_schema_converter.cc  test_service.proto  test_streaming_aggregator.cc  test_tool_registry.cc  test_tool_registry_complete.cc
RPC/test/: user.pb.cc  user.pb.h  user.proto
